--- a/style.css
+++ b/style.css
@@ -1,43 +1,3 @@
-style.css
-{
-    margin: 0;
-    padding: 0;
-}
-#titulo {
-    font-family: sans-serif;
-    color: #6337aa;
-    margin-left: 7%;
-} 
-#subtitulo {
-    font-family: sans-serif;
-    color: #622c96;
-    margin-left: 10%;
-} 
-
-#check{
-    display: inline-block;
-}
-fieldset {
-    border: 0;
-}
-body{
-    background-color: #92bfca;
-    font-family: sans-serif;
-    font-size: 1em;
-    color: #4529a8;
-    margin-left: 36%;
-    margin-top: 2%;
-    justify-content: center;
-}
-input, select, textarea, button {
-    font-family: sans-serif;
-    font-size: 1em;
-    color: #422791;
-    border-radius: 5px;
-}
-.grupo:before, .grupo:after {
-    display: table;
-}
 .grupo:after {
     clear: both;
 }
@@ -49,10 +9,9 @@ input, select, textarea, button {
     color: #59429d;
     display: block;
 }
-fieldset.grupo .campo {
-    float: left;
-    margin-right: 1em;
-}
+
+
+
 .campo input[type="text"], .campo input[type="email"], .campo select, .campo textarea {
     padding: 0.2em;
     border: 1px solid #59429d;
@@ -88,4 +47,7 @@ fieldset.grupo .campo {
 }
 .botao, select{
     cursor: pointer;
+    margin-top: 200px;
+    padding: 10px;
+    border-radius: 6px;
 }
